--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/telefonicadigital/nodejs-kit-iot-wearable/issues"
   },
-  "homepage": "https://github.com/telefonicadigital/nodejs-kit-iot-wearable"
+  "homepage": "https://github.com/telefonicadigital/nodejs-kit-iot-wearable",
+  "dependencies": {
+    "bluetooth-serial-port": "^1.2.0",
+    "underscore": "^1.7.0"
+  }
 }
