change from makefile to npm run doc

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API Bluetooth para o Kit IoT Wearable v.3 da Telefonica VIVO",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docs": "jsdoc2md ./lib/*.js > DOCS.md"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
   "dependencies": {
     "bluetooth-serial-port": "^1.2.0",
     "underscore": "^1.7.0"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^0.5.9"
   }
 }
