--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "underscore": "^1.7.0"
   },
   "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-jshint": "^1.9.0",
     "jsdoc-to-markdown": "^0.5.9"
   }
 }
