--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp": "^3.8.10",
     "gulp-jshint": "^1.9.0",
     "gulp-watch": "^3.0.0",
-    "jsdoc-to-markdown": "^0.5.9"
+    "jsdoc-to-markdown": "^0.5.9",
+    "should": "^4.6.0"
   }
 }
