--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/telefonicadigital/kit-iot-wearable-node",
   "dependencies": {
-    "bluetooth-serial-port": "^1.2.0",
+    "chalk": "^0.5.1",
+    "noble": "^0.3.7",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
