--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kit-iot-wearable",
-  "version": "1.0.1",
-  "description": "API Bluetooth para o Kit IoT Wearable v.3 da Telefonica VIVO",
+  "version": "1.0.2",
+  "description": "API Bluetooth (BLE) para o Kit IoT Wearable v.3 da Telefonica VIVO",
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
@@ -12,7 +12,9 @@
     "url": "https://github.com/telefonicadigital/kit-iot-wearable-node"
   },
   "keywords": [
+    "ble",
     "bluetooth",
+    "bluetooth low energy",
     "kit-iot",
     "kit-iot-wearable",
     "wireless",
