--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kit-iot-wearable",
+  "name": "kit-iot-wearable-bluetooth2",
   "version": "1.0.5",
-  "description": "API Bluetooth (BLE) para o Kit IoT Wearable v.3 da Telefonica VIVO",
+  "description": "API Bluetooth2 para o Kit IoT Wearable v.3 da Telefonica VIVO",
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
@@ -9,12 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/telefonicadigital/kit-iot-wearable-node"
+    "url": "https://github.com/telefonicadigital/kit-iot-wearable-node/tree/bluetooth2"
   },
   "keywords": [
-    "ble",
+    "bluetooth2",
     "bluetooth",
-    "bluetooth low energy",
     "kit-iot",
     "kit-iot-wearable",
     "wireless",
@@ -28,9 +27,8 @@
   },
   "homepage": "https://github.com/telefonicadigital/kit-iot-wearable-node",
   "dependencies": {
-    "chalk": "^0.5.1",
-    "noble": "^0.3.7",
-    "underscore": "^1.7.0"
+    "bluetooth-serial-port": "^1.2.2",
+    "underscore": "^1.8.2"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
